force-app/main/default/objects/Lead/fields/Capacidad_Deseada_del_Tanque__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_Deseada_del_Tanque__c</fullName>
    <inlineHelpText>Capacidad (en litros o m³) que el cliente desea para el tanque.</inlineHelpText>
    <label>Capacidad Deseada del Tanque</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>