force-app/main/default/objects/Lead/fields/Precio_Minimo_Deseado__c.field-meta.xml
<CustomField>
    <fullName>Precio_Minimo_Deseado__c</fullName>
    <inlineHelpText>Precio mínimo aceptable para el cliente.</inlineHelpText>
    <label>Precio Mínimo Deseado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>